the rest of the owl